--- a/src/theme/daisyui/Blocks/H3.astro
+++ b/src/theme/daisyui/Blocks/H3.astro
@@ -1,8 +1,7 @@
 ---
 import RichText from "./RichText.astro";
 
-
 const { block } = Astro.props;
-
 ---
-<h3><RichText content= { block.text }></RichText></h3>
+
+<h3 class="text-xl leading-normal"><RichText content={block.text} /></h3>
