--- a/src/theme/daisyui/styles/global.css
+++ b/src/theme/daisyui/styles/global.css
@@ -10,16 +10,20 @@
     @apply line-through
 }
 
-/* .underline {
-    @apply underline underline-offset-8
-} */
+.underline {
+    text-decoration: underline;
+}
 
-/* .italic {
-    @apply italic
-} */
+.italic {
+    font-style: italic;
+}
 
 .bold {
     @apply font-bold
+}
+
+.code {
+    @apply bg-gray-800 text-red-700 px-1 font-mono
 }
 
 /* Color of the text. Possible values are: "default", "gray", "brown", "orange", "yellow", "green", "blue", "purple", "pink", "red", "gray_background", "brown_background", "orange_background", "yellow_background", "green_background", "blue_background", "purple_background", "pink_background", "red_background". */
